[package]
name = "fast-logger"
version = "0.1.1"
authors = ["Erlend Hofstad Langseth <3rlendhl@gmail.com>", "Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"
description = "Fast logger for Rust"
homepage = "https://github.com/BourgondAries/fast-logger"
repository = "https://github.com/BourgondAries/fast-logger"
keywords = ["log", "logger", "logging"]
license = "LGPL-3.0-or-later"

[lib]
name = "fast_logger"
path = "lib.rs"

[dependencies]
chrono = "0.4.6"
colored = "1.8"
crossbeam-channel = "0.3.8"

[dev-dependencies]
regex = "1.1.6"
slog = "2.4.1"
slog-async = "2.3"
slog-term = "2.4"
