[package]
name = "fast-logger"
version = "0.6.0"
authors = ["Erlend Hofstad Langseth <3rlendhl@gmail.com>", "Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"
description = "Fast logger for Rust"
homepage = "https://github.com/BourgondAries/fast-logger"
repository = "https://github.com/BourgondAries/fast-logger"
keywords = ["log", "logger", "logging"]
license = "LGPL-3.0-or-later"

[lib]
name = "fast_logger"
path = "lib.rs"

[dependencies]
chrono = "0.4.7"
colored = "1.8"
crossbeam-channel = "0.3.9"

[dev-dependencies]
criterion = "0.3.0"
regex = "1.2.1"
slog = "2.5.2"
slog-async = "2.3"
slog-term = "2.4.1"

[[bench]]
name = "benchmark"
harness = false
